--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Nicholas Horn</title>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-9876856328434585",
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <noscript>
